--- a/src/features/Container/Protocols/MetaData/MetaData.scss
+++ b/src/features/Container/Protocols/MetaData/MetaData.scss
@@ -1,132 +1,134 @@
-thead {
-  display: contents !important;
-}
-.digitize-panel-content {
-  height: calc(100vh - 210px);
-  width: 100%;
-  overflow-y: scroll;
-}
-
-.metadata_item [class*='MuiAccordionSummary-root'] {
-  background: #e9e9e9;
-  //padding-left: 26px;
-}
-.metadata_item {
-  padding: 2px 8px 2px 5px;
-}
-.metadat-flex-plus {
-  float: left;
-}
-.metadata-plus-icon {
-  float: right;
-  padding-right: 4.5%;
-  font-size: 19px;
-}
-.metadata-plus-size {
-  font-size: 19px !important;
-}
-.metadata-checkbox {
-  // padding-left: 53%;
-  float: right;
-}
-.metadata_item [class*='Accordion-expanded'] {
-  background: transparent !important;
-}
-.protocol-column {
-  flex: 3 1;
-  display: flex;
-  flex-direction: column;
-  height: 50%;
-}
-th {
-  font-weight: bold !important;
-  border: 2px solid white;
-  background-color: #f9f9f9;
-  color: black;
-}
-td {
-  border: 2px solid white;
-}
-tr {
-  border: 2px solid white;
-}
 .metadata-card {
-  max-height: 450px !important;
-  overflow-y: auto;
-}
+  thead {
+    display: contents !important;
+  }
+  .digitize-panel-content {
+    height: calc(100vh - 210px);
+    width: 100%;
+    overflow-y: scroll;
+  }
 
-[class*='makeStyles-scrollable-'] > tr > th {
-  background-color: #f9f9f9;
-}
-// [class*='Table-scrollRoot-'] {
-//   overflow-y: unset !important;
-// }
+  .metadata_item [class*='MuiAccordionSummary-root'] {
+    background: #e9e9e9;
+    //padding-left: 26px;
+  }
+  .metadata_item {
+    padding: 2px 8px 2px 5px;
+  }
+  .metadat-flex-plus {
+    float: left;
+  }
+  .metadata-plus-icon {
+    float: right;
+    padding-right: 4.5%;
+    font-size: 19px;
+  }
+  .metadata-plus-size {
+    font-size: 19px !important;
+  }
+  .metadata-checkbox {
+    // padding-left: 53%;
+    float: right;
+  }
+  .metadata_item [class*='Accordion-expanded'] {
+    background: transparent !important;
+  }
+  .protocol-column {
+    flex: 3 1;
+    display: flex;
+    flex-direction: column;
+    height: 50%;
+  }
+  th {
+    font-weight: bold !important;
+    border: 2px solid white;
+    background-color: #f9f9f9;
+    color: black;
+  }
+  td {
+    border: 2px solid white;
+  }
+  tr {
+    border: 2px solid white;
+  }
+  .metadata-card {
+    max-height: 450px !important;
+    overflow-y: auto;
+  }
 
-[class*='MuiPaper-elevation1-'] {
-  border: none;
-  padding-bottom: 12px;
-  // border-top: 1px solid #e9e9e9;
-}
+  [class*='makeStyles-scrollable-'] > tr > th {
+    background-color: #f9f9f9;
+  }
+  // [class*='Table-scrollRoot-'] {
+  //   overflow-y: unset !important;
+  // }
 
-.checkbox-pad {
-  padding-bottom: 9px;
-}
+  [class*='MuiPaper-elevation1-'] {
+    border: none;
+    padding-bottom: 12px;
+    // border-top: 1px solid #e9e9e9;
+  }
 
-[class*='MuiTableCell-root-']:first-child {
-  background-color: #f4f4f4;
-  padding-left: 23px;
-}
-[class*='MuiTableCell-body-'] {
-  background-color: #f9f9f9;
-  color: black;
-}
-[class*='MuiTableCell-head-'] {
-  color: black;
-  padding-left: 23px;
-}
+  .checkbox-pad {
+    padding-bottom: 9px;
+  }
 
-.digitize-panel-content::-webkit-scrollbar {
-  background: transparent;
-  width: 0px;
-}
-[class*='MuiAccordionDetails-root-'] {
-  padding: 0;
-}
-.protocols {
-  .view-wrapper {
-    table tbody tr td {
-      padding-left: 23px;
-      width: 1%;
+  [class*='MuiTableCell-root-']:first-child {
+    background-color: #f4f4f4;
+    padding-left: 23px;
+  }
+  [class*='MuiTableCell-body-'] {
+    background-color: #f9f9f9;
+    color: black;
+  }
+  [class*='MuiTableCell-head-'] {
+    color: black;
+    padding-left: 23px;
+  }
+
+  .digitize-panel-content::-webkit-scrollbar {
+    background: transparent;
+    width: 0px;
+  }
+  [class*='MuiAccordionDetails-root-'] {
+    padding: 0;
+  }
+  .protocols {
+    .view-wrapper {
+      table tbody tr td {
+        padding-left: 23px;
+        width: 1%;
+      }
     }
   }
-}
 
-[class*='MuiTableRow-root-'] {
-  height: auto !important;
-}
+  [class*='MuiTableRow-root-'] {
+    height: auto !important;
+  }
 
-.metaData-boarder {
-  border: 1px solid rgba(0, 0, 0, 0.08);
-}
-.view-wrapper .MuiCard-root {
-  padding-right: 25px !important;
-  height: 100% !important;
-}
-[class*='Table-scrollRoot-'] {
-  width: 100% !important;
-}
-[class*='Accordion-icon-'] {
-  width: 1.3em;
-  height: 1.2em;
-  font-size: 20px;
-}
-[class*='MuiAccordionSummary-expandIcon'] {
-  left: 5px;
-}
-.accordion_summary_container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 48px;
-  padding-left: 10px;
+  .metaData-boarder {
+    border: 1px solid rgba(0, 0, 0, 0.08);
+  }
+  .view-wrapper .MuiCard-root {
+    padding-right: 25px !important;
+    height: 100% !important;
+  }
+  [class*='Table-scrollRoot-'] {
+    width: 100% !important;
+  }
+  [class*='Accordion-icon-'] {
+    width: 1.3em;
+    height: 1.2em;
+    font-size: 20px;
+  }
+  [class*='MuiAccordionSummary-expandIcon'] {
+    left: 5px;
+  }
+  .accordion_summary_container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 48px;
+    padding-left: 10px;
+  }
 }
